--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@ video {
   max-height: 100vh;
 }
 
-.cursor {
+.cursor,
+.cursor2 {
   height: 0;
   left: 0;
   position: absolute;
@@ -22,15 +23,41 @@ video {
   z-index: 10;
 }
 
-.cursor::after {
+.cursor::after,
+.cursor2::after {
   background-color: #0275d8;
   border-radius: 50%;
   content: "";
   display: block;
-  height: 40px;
+  height: 50px;
   left: 0;
   position: absolute;
   top: 0;
   transform: translate(-50%, -50%);
-  width: 40px;
+  width: 50px;
+}
+
+.cursor2::after {
+  background-color: #5cb85c;
+  width: 20px;
+  height: 20px;
+}
+
+.counter-box {
+  left: 50%;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+p {
+  font-size: 2rem;
+  text-align: center;
+}
+
+button {
+  border-radius: 4px;
+  border: 2px solid #0275d8;
+  font-size: 1rem;
+  padding: 1rem;
 }
